content/_generated-doc/2.7/config/quarkus-oauth2-o-auth2-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oauth2-o-auth2-build-time-config_configuration]]link:#quarkus-oauth2-o-auth2-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-oauth2-o-auth2-build-time-config_quarkus.oauth2.enabled]]`link:#quarkus-oauth2-o-auth2-build-time-config_quarkus.oauth2.enabled[quarkus.oauth2.enabled]`

[.description]
--
Determine if the OAuth2 extension is enabled. Enabled by default if you include the `elytron-security-oauth2` dependency, so this would be used to disable it.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-oauth2-o-auth2-build-time-config_quarkus.oauth2.role-claim]]`link:#quarkus-oauth2-o-auth2-build-time-config_quarkus.oauth2.role-claim[quarkus.oauth2.role-claim]`

[.description]
--
The claim that is used in the introspection endpoint response to load the roles.
--|string 
|`scope`

|===