content/_generated-doc/3.6/config/quarkus-oauth2-o-auth2-build-time-config.adoc

:summaryTableId: quarkus-oauth2-o-auth2-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oauth2-o-auth2-build-time-config_configuration]]link:#quarkus-oauth2-o-auth2-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-oauth2-o-auth2-build-time-config_quarkus.oauth2.enabled]]`link:#quarkus-oauth2-o-auth2-build-time-config_quarkus.oauth2.enabled[quarkus.oauth2.enabled]`


[.description]
--
Determine if the OAuth2 extension is enabled. Enabled by default if you include the `elytron-security-oauth2` dependency, so this would be used to disable it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OAUTH2_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OAUTH2_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-oauth2-o-auth2-build-time-config_quarkus.oauth2.role-claim]]`link:#quarkus-oauth2-o-auth2-build-time-config_quarkus.oauth2.role-claim[quarkus.oauth2.role-claim]`


[.description]
--
The claim that is used in the introspection endpoint response to load the roles.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OAUTH2_ROLE_CLAIM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OAUTH2_ROLE_CLAIM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`scope`

|===